Fix: un-turbo the link to show page & fix customer filter

--- a/app/views/appointments/_appointments.html.erb
+++ b/app/views/appointments/_appointments.html.erb
@@ -28,7 +28,7 @@
     <% @appointments.each do |appointment| %>
       <tr>
         <td class="w-full max-w-0 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:w-auto sm:max-w-none sm:pl-6">
-          <%= link_to appointment.ref_number, appointment_path(appointment) %>
+          <%= link_to appointment.ref_number, appointment_path(appointment), data: { turbo: false } %>
           <dl class="font-normal lg:hidden">
             <dt class="sr-only">Customer</dt>
             <dd class="mt-1 truncate text-gray-700"><%= appointment.customer&.name %></dd>
@@ -51,7 +51,7 @@
           <a href="<%= edit_appointment_path(appointment) %>" class="text-tokanisecondary-600 hover:text-tokanisecondary-900">Edit<span class="sr-only">, <%= appointment.id %></span></a>
         </td>
         <td class="hidden px-3 py-4 text-sm text-gray-500 sm:table-cell">
-          <a href="<%= appointment_path(appointment) %>" class="text-tokanisecondary-600 hover:text-tokanisecondary-900">Show<span class="sr-only">, <%= appointment.id %></span></a>
+          <a href="<%= appointment_path(appointment) %>" class="text-tokanisecondary-600 hover:text-tokanisecondary-900" data-no-turbolink='true'>Show<span class="sr-only">, <%= appointment.id %></span></a>
         </td>
       </tr>
     <% end %>
