setting the recipient correctly on the new form and scoping recipients on agencies and customers correctly

--- a/app/views/recipients/new.html.erb
+++ b/app/views/recipients/new.html.erb
@@ -14,7 +14,7 @@
                 </div>      
                 </div>
                 <div class="p-8 bg-white rounded shadow">
-                  <%= render partial: "form", locals: { recipient: @recipient, account_customers: @account_customers, customers: @customers} %>
+                  <%= render partial: "form", locals: { recipient: @recipient, customers: @customers, customers: @customers} %>
                 </div>
             </div>
           </div>
