--- a/app/views/bill_rates/_bill_rate.html.erb
+++ b/app/views/bill_rates/_bill_rate.html.erb
@@ -26,6 +26,11 @@
         <dd class="mt-1 text-sm text-gray-900"><%= number_to_currency(bill_rate.hourly_bill_rate) %></dd>
       </div>
       <div class="sm:col-span-1">
+        <dt class="text-sm font-medium text-tokanisecondary-500">Normal Business Hours</dt>
+        <dd class="mt-1 text-sm text-gray-900">
+          <%= start_config(bill_rate, "regular_hours_start_seconds") %> to <%= end_config(bill_rate, "regular_hours_end_seconds" ) %></dd>
+      </div>
+      <div class="sm:col-span-1">
         <dt class="text-sm font-medium text-tokanisecondary-500">Round Time</dt>
         <dd class="mt-1 text-sm text-gray-900"> <%= bill_rate.round_time.titleize %></dd>
       </div>
@@ -49,11 +54,7 @@
         <dt class="text-sm font-medium text-tokanisecondary-500">After Hours Overage</dt>
         <dd class="mt-1 text-sm text-gray-900"><%= number_to_currency(bill_rate.after_hours_overage) %></dd>
       </div>
-      <div class="sm:col-span-1">
-        <dt class="text-sm font-medium text-tokanisecondary-500">After Hours Times</dt>
-        <dd class="mt-1 text-sm text-gray-900">
-          <%= start_config(bill_rate, "after_hours_start_seconds") %> to <%= end_config(bill_rate, "after_hours_end_seconds" ) %></dd>
-      </div>
+      
       <div class="sm:col-span-1">
         <dt class="text-sm font-medium text-tokanisecondary-500">Cancel Rate</dt>
         <dd class="mt-1 text-sm text-gray-900"><%= number_to_currency(bill_rate.cancel_rate) %></dd>
