--- a/app/views/appointments/_appointments.html.erb
+++ b/app/views/appointments/_appointments.html.erb
@@ -3,16 +3,22 @@
     <thead class="bg-gray-50">
       <tr>
         <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6"><%= sortable @appointments, :id, "Ref Numb" %></th>
-        <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Customer</th>
+        <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">
+          <a data-action="click->appointments#sort" class="inline-flex items-center select-none" aria-label="Sort By">
+            <p class="text-sm uppercase" data-sort-type="customer">Customer</p>
+            <%= hidden_field_tag 'sort_by[customer]', params[:sort_by].try(:[], :customer) %>
+            <svg class="w-4 h-4 ml-2 text-gray-500 ease-in duration-200 <%= params[:sort_by].try(:[], :customer) == "true" ? "rotate-180" : "" %>" id="sort-chevron" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+          </a>
+        </th>
         <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Modality</th>
         <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Language</th>
         <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">Duration</th>
         <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell">
-          <button data-action="click->appointments#sort" role="button" class="inline-flex items-center select-none" aria-label="Sort By">
-            <p class="text-sm uppercase">Start Time</p>
-            <%= hidden_field_tag :sort_by, params[:sort_by] %>
-            <svg class="w-4 h-4 ml-2 text-gray-500 ease-in duration-200 <%= params[:sort_by] == "date" ? "rotate-180" : "" %>" id="sort-chevron" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
-          </button>
+          <a data-action="click->appointments#sort" class="inline-flex items-center select-none" aria-label="Sort By">
+            <p class="text-sm uppercase" data-sort-type="date">Date</p>
+            <%= hidden_field_tag 'sort_by[date]', params[:sort_by].try(:[], :date) %>
+            <svg class="w-4 h-4 ml-2 text-gray-500 ease-in duration-200 <%= params[:sort_by].try(:[], :date) == "true" ? "rotate-180" : "" %>" id="sort-chevron" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+          </a>
         </th>
         <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900"></th>
         <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900"></th>
@@ -22,7 +28,7 @@
     <% @appointments.each do |appointment| %>
       <tr>
         <td class="w-full max-w-0 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:w-auto sm:max-w-none sm:pl-6">
-          <%= link_to appointment.ref_number, appointment_path(appointment) %>
+          <%= link_to appointment.ref_number, appointment_path(appointment), data: { turbo: false } %>
           <dl class="font-normal lg:hidden">
             <dt class="sr-only">Customer</dt>
             <dd class="mt-1 truncate text-gray-700"><%= appointment.customer&.name %></dd>
@@ -45,7 +51,7 @@
           <a href="<%= edit_appointment_path(appointment) %>" class="text-tokanisecondary-600 hover:text-tokanisecondary-900">Edit<span class="sr-only">, <%= appointment.id %></span></a>
         </td>
         <td class="hidden px-3 py-4 text-sm text-gray-500 sm:table-cell">
-          <a href="<%= appointment_path(appointment) %>" class="text-tokanisecondary-600 hover:text-tokanisecondary-900">Show<span class="sr-only">, <%= appointment.id %></span></a>
+          <%= link_to "Show", appointment_path(appointment), class: "text-tokanisecondary-600 hover:text-tokanisecondary-900", target: "_top" %>
         </td>
       </tr>
     <% end %>
