--- a/app/views/interpreters/_availability_form.html.erb
+++ b/app/views/interpreters/_availability_form.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= availability.id || "new_availability_#{availability.wday}" %>_form_wrapper" class="border rounded-3 border-coral border-2 mb-3 mt-3">
+<div id="<%= availability.id || "new_availability_#{availability.wday}" %>_form_wrapper" class="border rounded-lg border-coral border-2 my-5">
 
   <%= form_with model: availability do |form| %>
 
@@ -10,7 +10,7 @@
 
     <% if @notice %>
       <div class="alert alert-danger alert-dismissible" id="<%= if availability.new_record? then "new_availability_#{availability.wday}" else availability.id end %>_notice" >
-        <span class="alert-text">
+        <span class="alert-text text-green-500">
           <strong><%= @notice %></strong>
         </span>
       </div>
@@ -18,12 +18,16 @@
 
     <div id="new_availability_<%= availability.wday %>_notice"></div>
 
-    <div class="m-8">
-  		<h4 class="mb-3">Add Availability:</h4>
+    <div class="my-4 px-3">
+			<div data-controller="interpreters" clas="flex absolute">
+				<%= button_tag "#", data: { action: "interpreters#removeElement", index: availability.id || availability.wday }, type: "button", class: "relative bottom-3 left-3 p-1 float-right" do %>
+					<%= fa_icon("circle-xmark", class: "text-slate-400 h-5 flex m-auto") %>
+				<% end %>
+			</div>
   		<div class="flex flex-wrap mb-2">
-  			<div class="w-1/3 md:w-1/3 px-3 mb-6 md:mb-0">
+  			<div class="w-1/3 md:w-1/3 mb-6 md:mb-0">
   				<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="start-time">
-  					From:
+  					Start From:
   				</label>
 
           <div class="grid grid-cols-2 gap-4">
@@ -41,6 +45,37 @@
             <div><%= select_tag 'times[finish][minute]', options_for_select((0..45).step(15).map {|i| [lpad_number(i), lpad_number(i) ]}, selected: lpad_number(availability.end_minute)), { id: dom_id(availability, 'times_end_minute') , class: "form-select"} %></div>
           </div>
   			</div>
+				<div class="w-1/6 md:w-1/3 mb-6 md:mb-0">
+					<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="start-time">
+						Modality:
+					</label>
+					<div class="flex flex-wrap items-center">
+						<div class="flex flex-wrap items-center mr-3 pt-2">
+							<%= form.label :in_person, class: "text-sm", title: "In-Person" do %>
+								<p class="ml-2"><i class="fa fa-person"></i></p>
+							<% end %>
+							<%= form.check_box :in_person, class: "ml-2" %>
+						</div>
+						<div class="flex flex-wrap items-center mr-3 pt-2">
+							<%= form.label :phone, class: "text-sm", title: "Phone" do %>
+								<p class="ml-2"><i class="fa fa-phone"></i></p>
+							<% end %>
+							<%= form.check_box :phone, class: "ml-2" %>
+						</div>
+						<div class="flex flex-wrap items-center mr-3 pt-2">
+							<label for="in_person"></label>
+							<%= form.label :video, class: "text-sm", title: "Video Call" do %>
+								<p class="ml-2"><i class="fa fa-video"></i></p>
+							<% end %>
+							<%= form.check_box :video, class: "ml-2" %>
+						</div>
+						<button type="submit" class="mt-3 inline-flex w-full items-center justify-center rounded-lg border border-transparent bg-tokanisecondary-700 px-4 py-2 font-medium text-white shadow-sm hover:bg-tokanisecondary-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Submit</button>
+					</div>
+				</div>
+				<div class="w-1/6 md:w-1/3 mb-6 md:mb-0">
+
+  			</div>
+				<!--
   			<div class="w-1/8 md:w-1/8 px-3 mb-6 md:mb-0">
   				<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="availability_in_person">
   					In-Person:
@@ -68,9 +103,8 @@
   					<p class="ml-2"><i class="fa fa-video"></i></p>
   				</div>
   			</div>
-  			<div class="w-1/8 md:w-1/8 px-3 mb-6 md:mb-0 mt-8">
-  			 <button type="submit" class="mt-3 inline-flex w-full items-center justify-center rounded-none border border-transparent bg-indigo-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Add</button>
-  			</div>
+				-->
+
   		</div>
     </div>
   <% end %>
