--- a/app/views/interpreters/_availability_table.html.erb
+++ b/app/views/interpreters/_availability_table.html.erb
@@ -1,12 +1,7 @@
-<div class="px-4 sm:px-6 lg:px-8 mb-4 border-t">
-  <div class="sm:flex sm:items-center">
-    <div class="sm:flex-auto">
-      <h1 class="text-xl font-semibold text-gray-900">Current Availability</h1>
-    </div>
-  </div>
+<div class="px-4 sm:px-6 lg:px-8 my-4 bg-white shadow">
   <div class="mt-5 flex flex-col">
     <div class="-my-2 -mx-4 overflow-x-auto sm:-mx-6 lg:-mx-8">
-      <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
+      <div class="inline-block min-w-full py-2 align-middle">
         <div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
           <table class="min-w-full divide-y divide-gray-300">
             <thead class="bg-gray-50">
@@ -32,3 +27,4 @@
     </div>
   </div>
 </div>
+
