--- a/app/views/interpreters/availability.html.erb
+++ b/app/views/interpreters/availability.html.erb
@@ -4,57 +4,47 @@
     <div class="py-6">
       <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
         <div class="px-4 sm:px-6 lg:px-6">
-          <div class="sm:flex sm:items-center pb-6">
-            <div class="sm:flex-auto">
-              <h1 class="text-xl font-semibold text-gray-900">
-               <span class="text-tokanisecondary-500">
-                <%= current_user.full_name %>
-                </span>
-                <span class="text-tokaniprimary-600 font-light mx-2">/Availability</span>
-              </h1>
-            </div>
-          </div>
 
           <div class="p-8 bg-white rounded shadow">
             <div class="px-4 sm:px-6 lg:px-8 container">
-              <div class="justify-center content-center mb-5">
-                <%= form_with url:  update_timezone_interpreter_path(@interpreter), method: :patch do |form| %>
+              <div class="justify-center content-center mb-5" data-controller="interpreters">
+                <%= form_with url:  update_timezone_interpreter_path(@interpreter), class: "form", method: :patch, data: { turbo_frame: "interpreters", target: "interpreters_target.form", interpreters_target: "form" } do |form| %>
                   <div class="mb-3">
                     <p id="timezone_notice"><%= flash[:timezone_notice] %></p>
                   </div>
 
-                  <div class="grid grid-cols-2 gap-4 mb-3">
-                    <div>
-                      <%= form.label :my_timezone, "My Time Zone", class: 'text-blueCoral text-bolder text-lg'%>
-                      <%= form.select :timezone, options_from_collection_for_select(Account.available_timezones, :name, :name, @interpreter.time_zone), {}, {class: 'form-select' } %>
-                    </div>
-                    <div>
-                      <br>
-                      <div class="mt-3">
-                        <button type="submit" class="mt-3 inline-flex w-full items-center justify-center rounded-none border border-transparent bg-indigo-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Update</button>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="">
-                    <div class="justify-center content-center">
-                      <p style="color: red;">**Warning! Changing your time zone will remove all of your availabilities!</p>
+                  <div class="mb-3">
+                    <div></div>
+                    <div class="w-1/2 m-auto">
+                      <button id="submit-timezone__btn" type="submit" class="hidden mt-3 inline-flex w-full items-center justify-center rounded-none border border-transparent bg-indigo-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm"
+                      data-controller="interpreters" data-turbo-confirm="Updating this resets availabilities. Do you want to proceed?" data-turbo="true">Update</button>
+                      <%= form.select :timezone, options_from_collection_for_select(Account.available_timezones, :name, :name, @interpreter.time_zone), {}, {class: 'form-select', data: { action: "change->interpreters#submitForm", selected_value: @interpreter.time_zone }} %>
                     </div>
                   </div>
                 <% end %>
               </div>
 
-              <div data-controller="tabs" data-tabs-active-tab="-mb-px border-l border-t border-r rounded-t">
-                <ul class="list-reset list-none flex border-b">
+              <div data-controller="tabs">
+                <ul class="list-reset list-none flex justify-center border-b">
                   <% @days.each_with_index do |day, index| %>
                     <li class="-mb-px mr-1" data-tabs-target="tab" data-action="click->tabs#change">
-                      <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-700 font-semibold no-underline" href="#"><%= day %></a>
+                      <a class="text-sm inline-flex align-center justify-center p-4 border-b-2 border-transparent rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" href="#">
+                        <%= day %>
+                      </a>
                     </li>
                   <% end %>
                 </ul>
-
                 <% @days.each_with_index do |day, index| %>
-                  <div class="hidden py-4 px-4 border-l border-b border-r" data-tabs-target="panel">
-                		<%= render partial: "availability_form", locals: {availability: Availability.new(interpreter_id: @interpreter.id, wday: index)} %>
+                  <div class="hidden py-4" data-tabs-target="panel">
+                    <div class="text-right">
+                      <%= link_to add_availability_interpreters_path(index: index), class: "mt-3 inline-flex w-full items-center justify-center rounded-lg border border-transparent bg-tokanisecondary-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:w-auto sm:text-sm", data: { turbo_frame: "availability_day_#{index}"}  do %>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        </svg>
+                        <p class="ml-2">Add Availability</p>
+                      <% end %>
+                    </div>
+                    <%= turbo_frame_tag "availability_day_#{index}" %>
                 		<%= render partial: "availability_table", locals: {index: index} %>
                   </div>
                 <% end %>
