--- a/app/views/interpreters/dashboard.html.erb
+++ b/app/views/interpreters/dashboard.html.erb
@@ -1,80 +1,181 @@
 <div class="flex flex-1 flex-col md:pl-64">
-	<main class="flex-1">
-	  <div class="py-6">
-  		<div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
-  		  <div class="px-4 sm:px-6 lg:px-6">
-  			<div class="sm:flex sm:items-center pb-6">
-  				<div class="sm:flex-auto">
-  				  <h1 class="text-xl font-semibold text-gray-900">
-  				    <span class="text-tokanisecondary-500"><%= current_user.full_name %></span>
-  					  <span class="text-tokaniprimary-600 font-light mx-2">/ Dashboard</span>
-  				  </h1>
-  				</div>
-  			</div>
-  		  <div class="p-8 bg-white rounded shadow">
-  		    <div class="px-4 sm:px-6 lg:px-8 container">
-            <div class="mx-auto max-w-7xl bg-white py-14 px-6 lg:px-8">
-              <div class="mt-5 space-y-12 lg:grid lg:grid-cols-3 lg:gap-x-8 lg:space-y-0">
-                <div class="relative flex flex-col rounded-2xl border border-gray-200 bg-white p-8 shadow-sm">
-                  <div class="flex-1">
-                    <h3 class="text-xl font-semibold text-gray-900 text-center">In Person Appointments</h3>
-                    <ul role="list" class="mt-6 space-y-6">
-                      <li class="text-center"><%= @in_person_stats[:today] %> today</li>
-            					<li class="text-center"><%= @in_person_stats[:week] %> next seven days</li>
-            					<li class="text-center"><%= @in_person_stats[:month] %> next thirty days</li>
-                    </ul>
-                  </div>
+	<main class="flex-1 pb-8">
+    <!-- Page header -->
+    <div class="mt-8">
+      <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8">
+        <h2 class="text-lg font-medium leading-6 text-gray-900">Overview</h2>
+        <div class="mt-2 grid grid-cols-1 gap-5 sm:grid-cols-2 lg:grid-cols-3">
+          <!-- Card -->
+          <div class="overflow-hidden rounded-lg bg-white shadow">
+            <div class="p-5">
+              <div class="flex items-center">
+                <div class="flex-shrink-0">
+                  <!-- Heroicon name: outline/scale -->
+                  <svg class="h-6 w-6 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v17.25m0 0c-1.472 0-2.882.265-4.185.75M12 20.25c1.472 0 2.882.265 4.185.75M18.75 4.97A48.416 48.416 0 0012 4.5c-2.291 0-4.545.16-6.75.47m13.5 0c1.01.143 2.01.317 3 .52m-3-.52l2.62 10.726c.122.499-.106 1.028-.589 1.202a5.988 5.988 0 01-2.031.352 5.988 5.988 0 01-2.031-.352c-.483-.174-.711-.703-.59-1.202L18.75 4.971zm-16.5.52c.99-.203 1.99-.377 3-.52m0 0l2.62 10.726c.122.499-.106 1.028-.589 1.202a5.989 5.989 0 01-2.031.352 5.989 5.989 0 01-2.031-.352c-.483-.174-.711-.703-.59-1.202L5.25 4.971z" />
+                  </svg>
                 </div>
-            		<div class="relative flex flex-col rounded-2xl border border-gray-200 bg-white p-8 shadow-sm">
-                  <div class="flex-1">
-                    <h3 class="text-xl font-semibold text-gray-900 text-center">Telephone Appointments</h3>
-                    <ul role="list" class="mt-6 space-y-6">
-                      <li class="text-center"><%= @phone_stats[:today] %> today</li>
-                      <li class="text-center"><%= @phone_stats[:week] %> next seven days</li>
-                      <li class="text-center"><%= @phone_stats[:month] %> next thirty days</li>
-                    </ul>
-                  </div>
-                </div>
-            		<div class="relative flex flex-col rounded-2xl border border-gray-200 bg-white p-8 shadow-sm">
-                  <div class="flex-1">
-                    <h3 class="text-xl font-semibold text-gray-900 text-center">Video Appointments</h3>
-                    <ul role="list" class="mt-6 space-y-6">
-                      <li class="text-center"><%= @video_stats[:today] %> today</li>
-                      <li class="text-center"><%= @video_stats[:week] %> next seven days</li>
-                      <li class="text-center"><%= @video_stats[:month] %> next thirty days</li>
-                    </ul>
-                  </div>
+                <div class="ml-5 w-0 flex-1">
+                  <dl>
+                    <dt class="truncate text-sm font-medium text-gray-500">Created Appointments</dt>
+                    <dd>
+                      <div class="text-lg font-medium text-gray-900"><%= @created_appointments_count %></div>
+                    </dd>
+                  </dl>
                 </div>
               </div>
-              <% if @appointment_status_data.any? %>
-              	<div class="mt-5">
+            </div>
+            <div class="bg-gray-50 px-5 py-3">
+              <div class="text-sm">
+                <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900 p-2">View all</a>
+              </div>
+            </div>
+          </div>
+          <!-- Card -->
+          <div class="overflow-hidden rounded-lg bg-white shadow">
+            <div class="p-5">
+              <div class="flex items-center">
+                <div class="flex-shrink-0">
+                  <!-- Heroicon name: outline/scale -->
+                  <svg class="h-6 w-6 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v17.25m0 0c-1.472 0-2.882.265-4.185.75M12 20.25c1.472 0 2.882.265 4.185.75M18.75 4.97A48.416 48.416 0 0012 4.5c-2.291 0-4.545.16-6.75.47m13.5 0c1.01.143 2.01.317 3 .52m-3-.52l2.62 10.726c.122.499-.106 1.028-.589 1.202a5.988 5.988 0 01-2.031.352 5.988 5.988 0 01-2.031-.352c-.483-.174-.711-.703-.59-1.202L18.75 4.971zm-16.5.52c.99-.203 1.99-.377 3-.52m0 0l2.62 10.726c.122.499-.106 1.028-.589 1.202a5.989 5.989 0 01-2.031.352 5.989 5.989 0 01-2.031-.352c-.483-.174-.711-.703-.59-1.202L5.25 4.971z" />
+                  </svg>
+                </div>
+                <div class="ml-5 w-0 flex-1">
+                  <dl>
+                    <dt class="truncate text-sm font-medium text-gray-500">Appointments Scheduled</dt>
+                    <dd>
+                      <div class="text-lg font-medium text-gray-900"><%= @appointments_scheduled_count %></div>
+                    </dd>
+                  </dl>
+                </div>
+              </div>
+            </div>
+            <div class="bg-gray-50 px-5 py-3">
+              <div class="text-sm">
+                <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900 p-2">View all</a>
+              </div>
+            </div>
+          </div>
+          <!-- Card -->
+          <div class="overflow-hidden rounded-lg bg-white shadow">
+            <div class="p-5">
+              <div class="flex items-center">
+                <div class="flex-shrink-0">
+                  <!-- Heroicon name: outline/scale -->
+                  <svg class="h-6 w-6 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v17.25m0 0c-1.472 0-2.882.265-4.185.75M12 20.25c1.472 0 2.882.265 4.185.75M18.75 4.97A48.416 48.416 0 0012 4.5c-2.291 0-4.545.16-6.75.47m13.5 0c1.01.143 2.01.317 3 .52m-3-.52l2.62 10.726c.122.499-.106 1.028-.589 1.202a5.988 5.988 0 01-2.031.352 5.988 5.988 0 01-2.031-.352c-.483-.174-.711-.703-.59-1.202L18.75 4.971zm-16.5.52c.99-.203 1.99-.377 3-.52m0 0l2.62 10.726c.122.499-.106 1.028-.589 1.202a5.989 5.989 0 01-2.031.352 5.989 5.989 0 01-2.031-.352c-.483-.174-.711-.703-.59-1.202L5.25 4.971z" />
+                  </svg>
+                </div>
+                <div class="ml-5 w-0 flex-1">
+                  <dl>
+                    <dt class="truncate text-sm font-medium text-gray-500">Appointments Completed</dt>
+                    <dd>
+                      <div class="text-lg font-medium text-gray-900"><%= @appointments_completed_count %></div>
+                    </dd>
+                  </dl>
+                </div>
+              </div>
+            </div>
+            <div class="bg-gray-50 px-5 py-3">
+              <div class="text-sm">
+                <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900 p-2">View all</a>
+              </div>
+            </div>
+          </div>
 
-                  <div class="grid grid-cols-2 gap-4">
-                    <div>
-                  		<%= pie_chart @appointment_status_data %>
-                      <br>
-                      <center><small><i>Appointment status breakdown for your appointments in the month of <%= @service.current_month %>.</i></small></center>
-                    </div>
-                    <div>
-                      <h4 class="mb-5">Upcoming Appointments <small>(next 7 days)</small></h4>
+          <!-- More items... -->
+        </div>
+      </div>
 
-                      <% if @upcoming_appointments.present? %>
-                        <ul>
-                          <% @upcoming_appointments.each do |appt| %>
-                            <li><%= link_to appointment_readable_link_title(appt, current_user), appointment_details_interpreter_path(appt) %></li>
-                          <% end %>
-                        </ul>
-                      <% else %>
-                        <p><i>No upcoming appointments in the next 7 days.</i></p>
-                      <% end %>
+      <h2 class="mx-auto mt-8 max-w-6xl px-4 text-lg font-medium leading-6 text-gray-900 sm:px-6 lg:px-8">Recent Appointment List</h2>
+      <!-- Activity list (smallest breakpoint only) -->
+      <div class="shadow sm:hidden">
+        <ul role="list" class="mt-2 divide-y divide-gray-200 overflow-hidden shadow sm:hidden">
+          <% @appointments.each do |appoinment| %>
+            <li>
+              <a href="#" class="block bg-white px-4 py-4 hover:bg-gray-50">
+                <span class="flex items-center space-x-4">
+                  <span class="flex flex-1 space-x-2 truncate">
+                    <!-- Heroicon name: mini/banknotes -->
+                    <svg class="h-5 w-5 flex-shrink-0 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                      <path fill-rule="evenodd" d="M1 4a1 1 0 011-1h16a1 1 0 011 1v8a1 1 0 01-1 1H2a1 1 0 01-1-1V4zm12 4a3 3 0 11-6 0 3 3 0 016 0zM4 9a1 1 0 100-2 1 1 0 000 2zm13-1a1 1 0 11-2 0 1 1 0 012 0zM1.75 14.5a.75.75 0 000 1.5c4.417 0 8.693.603 12.749 1.73 1.111.309 2.251-.512 2.251-1.696v-.784a.75.75 0 00-1.5 0v.784a.272.272 0 01-.35.25A49.043 49.043 0 001.75 14.5z" clip-rule="evenodd" />
+                    </svg>
+                    <span class="flex flex-col truncate text-sm text-gray-500">
+                      <span class="truncate">Payment to Molly Sanders</span>
+                      <span><span class="font-medium text-gray-900">$20,000</span> USD</span>
+                      <time datetime="2020-07-11">July 11, 2020</time>
+                    </span>
+                  </span>
+                  <!-- Heroicon name: mini/chevron-right -->
+                  <svg class="h-5 w-5 flex-shrink-0 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                    <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
+                  </svg>
+                </span>
+              </a>
+            </li>
+          <% end %>
 
-                    </div>
-              	</div>
+          <!-- More transactions... -->
+        </ul>
+
+        <nav class="flex items-center justify-between border-t border-gray-200 bg-white px-4 py-3" aria-label="Pagination">
+          <div class="flex flex-1 justify-between">
+            <a href="#" class="relative inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:text-gray-500">Previous</a>
+            <a href="#" class="relative ml-3 inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:text-gray-500">Next</a>
+          </div>
+        </nav>
+      </div>
+
+      <!-- Activity table (small breakpoint and up) -->
+      <div class="hidden sm:block">
+        <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8">
+          <div class="mt-2 flex flex-col">
+            <div class="min-w-full overflow-hidden overflow-x-auto align-middle shadow sm:rounded-lg">
+              <table class="min-w-full divide-y divide-gray-200">
+                <thead>
+                  <tr>
+                    <th class="bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900" scope="col"><%= sortable @appointments, :id, "Ref Numb" %></th>
+                    <th class="bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900" scope="col"><%= sortable @appointments, :id, "Customer Name" %></th>
+                    <th class="hidden bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900 md:block" scope="col">Status</th>
+                    <th class="bg-gray-50 px-6 py-3 text-right text-sm font-semibold text-gray-900" scope="col">Date</th>
+                  </tr>
+                </thead>
+                <tbody class="divide-y divide-gray-200 bg-white">
+                  <% @appointments.each do |appointment| %>
+                    <tr class="bg-white">
+                      <td class="whitespace-nowrap px-6 py-4 text-right text-sm text-gray-500">
+                        <time datetime="2020-07-11"><%= appointment.ref_number %></time>
+                      </td>
+                      <td class="w-full max-w-0 whitespace-nowrap px-6 py-4 text-sm text-gray-900">
+                        <div class="flex">
+                          <a href="#" class="group inline-flex space-x-2 truncate text-sm">
+                            <p class="truncate text-gray-500 group-hover:text-gray-900"><%= appointment.customer.name %></p>
+                          </a>
+                        </div>
+                      </td>
+                      <td class="hidden whitespace-nowrap px-6 py-4 text-sm text-gray-500 md:block">
+                        <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800 capitalize"><%= appointment.status %></span>
+                      </td>
+                      <td class="whitespace-nowrap px-6 py-4 text-right text-sm text-gray-500">
+                        <time datetime="2020-07-11"><%= appointment.start_time.strftime("%B %-d at %l:%M %p") %></time>
+                      </td>
+                    </tr>
+                  <% end %>
+
+                  <!-- More transactions... -->
+                </tbody>
+              </table>
+              <!-- Pagination -->
+              <% if @pagy.pages > 1 %>
+                <div class="my-6 text-center">
+                  <%== pagy_nav(@pagy) %>
+                </div>
               <% end %>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </main>
 </div>
