--- a/app/views/interpreters/time_off.html.erb
+++ b/app/views/interpreters/time_off.html.erb
@@ -1,107 +1,125 @@
 <div class="flex flex-1 flex-col md:pl-64">
   <main class="flex-1">
-    <div class="py-6">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6 py-6">
+      <div class="p-8 bg-white rounded shadow">
+        <div class="px-4 pt-6 sm:px-6 lg:px-8 container">
+          <div class="container">
+            <form class="p-8 bg-white rounded shadow">
+              <div class="my-4">
+                <label for="reason" class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2">Reason</label>
+                <div class="mt-1">
+                  <input type="text" name="reason" id="reason" class="block rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" placeholder="Doctor's Appointment">
+                </div>
+              </div>
+              <div class="flex flex-wrap mb-2">
+                <div class="mb-6 md:mb-0">
+                  <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="start-date">
+                    Start From:
+                  </label>
 
-      <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
-        <div class="px-4 sm:px-6 lg:px-6">
-          <div class="sm:flex sm:items-center pb-6">
-              <div class="sm:flex-auto"> 
-                <h1 class="text-xl font-semibold text-gray-900">
-                 <span class="text-tokanisecondary-500">
-                  <%= current_user.full_name %>
-                  </span>
-                  <span class="text-tokaniprimary-600 font-light mx-2">/ Time - Off</span>    
-                </h1>
-              </div>      
+                  <div class="flex flex-start">
+                    <div>
+                      <input type="date" name="start-date" id="start-date" class="inline-block w-1/8 rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500">
+                    </div>
+                    <div>
+                      <input type="time" name="start-time" id="start-time" class="ml-2 w-1/8 rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500">
+                    </div>
+                  </div>
+                </div>
+                <div class="pl-3 mb-6 md:mb-0">
+                  <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="start-time">
+                    To:
+                  </label>
+
+                  <div class="flex flex-start">
+                    <div>
+                      <input type="date" name="end-date" id="end-date" class="inline-block w-1/8 rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500">
+                    </div>
+                    <div>
+                      <input type="time" name="end-time" id="end-time" class="ml-2 w-1/8 rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500">
+                    </div>
+                  </div>
+                </div>
+                <div class="pl-3 mb-6 md:mb-0">
+                  <div class="relative" style="top:40%;">
+                    <button type="submit" class="mt-3 inline-flex w-full items-center justify-center rounded-lg border border-transparent bg-tokanisecondary-700 px-4 py-2 font-medium text-white shadow-sm hover:bg-tokanisecondary-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Create</button>
+                  </div>
+                </div>
+              </div>
+            </form>
+            <div class="mt-8 flex flex-col">
+              <div class="-my-2 -mx-4 overflow-x-auto sm:-mx-6 lg:-mx-8">
+                <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
+                  <div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
+                    <table class="min-w-full divide-y divide-gray-300 border">
+                      <thead class="bg-gray-50">
+                        <tr>
+                          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Reason</th>
+                          <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Start Time</th>
+                          <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">End Time</th>
+                          <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
+                            <span class="sr-only">Delete</span>
+                          </th>
+                        </tr>
+                      </thead>
+                      <tbody class="bg-gray-50">
+                        <!-- Odd row -->
+                        <tr>
+                          <td class="whitespace-nowrap py-4 pl-4 text-sm text-gray-500">Thanksgiving</td>
+                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Aug. 25 2021 9:00 AM</td>
+                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Aug. 29 2021 9:30 AM</td>
+                          <td class="whitespace-nowrap px-3 py-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-red-500">
+                              <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                            </svg>
+                          </td>
+                        </tr>
+                      </tbody>
+                      <tbody class="bg-white">
+                        <!-- Even row -->
+                        <tr>
+                          <td class="whitespace-nowrap py-4 pl-4 text-sm text-gray-500">Thanksgiving</td>
+                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Aug. 25 2021 9:00 AM</td>
+                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Aug. 29 2021 9:30 AM</td>
+                          <td class="whitespace-nowrap px-3 py-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-red-500">
+                              <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                            </svg>
+                          </td>
+                        </tr>
+                      </body>
+                      </tbody>
+                        <tbody class="bg-gray-50">
+                        <tr>
+                          <td class="whitespace-nowrap py-4 pl-4 text-sm text-gray-500">Thanksgiving</td>
+                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Aug. 25 2021 9:00 AM</td>
+                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Aug. 29 2021 9:30 AM</td>
+                          <td class="whitespace-nowrap px-3 py-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-red-500">
+                              <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                            </svg>
+                          </td>
+                        </tr>
+                      </tbody>
+                      <tbody class="bg-white">
+                        <!-- Even row -->
+                        <tr>
+                          <td class="whitespace-nowrap py-4 pl-4 text-sm text-gray-500">Thanksgiving</td>
+                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Aug. 25 2021 9:00 AM</td>
+                          <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Aug. 29 2021 9:30 AM</td>
+                          <td class="whitespace-nowrap px-3 py-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-red-500">
+                              <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+                            </svg>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
             </div>
-        <div class="p-8 bg-white rounded shadow">
-        <div class="px-4 sm:px-6 lg:px-8 container">
-
-<div class="container m-10">
-	<form>
-		<div class="columns-2 w-1/2">
-			<label for="start-date" class="block font-medium text-gray-700 mt-2">From</label>
-			<div class="relative rounded-md">
-				<input type="date" name="start-date" id="start-date" class="inline-block w-1/8 rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500">
-				<i class="fa fa-2xl fa-calendar ml-1"></i>
-				<input type="time" name="start-time" id="start-time" class="ml-4 w-1/8 rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500">
-			</div>
-			<label for="end-date" class="block font-medium text-gray-700 mt-2">To</label>
-			<div class="relative rounded-md">
-				<input type="date" name="end-date" id="end-date" class="inline-block w-1/8 rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500">
-				<i class="fa fa-2xl fa-calendar ml-1"></i>
-				<input type="time" name="end-time" id="end-time" class="ml-4 w-1/8 rounded-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500">
-			</div>
-		</div>
-		<div class="mt-4">
-			<label for="reason" class="block text-sm font-medium text-gray-700">Reason</label>
-			<div class="mt-1">
-				<input type="text" name="reason" id="reason" class="block w-3/4 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" placeholder="Doctor's Appointment">
-			</div>
-		</div>
-		<div class="mt-4">
-			<button type="button" class="inline-flex items-center rounded border border-transparent bg-indigo-600 px-2.5 py-1.5 text-xs font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Create</button>
-		</div>
-	</form>
-	<div class="mt-8 flex flex-col">
-    <div class="-my-2 -mx-4 overflow-x-auto sm:-mx-6 lg:-mx-8">
-      <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
-        <div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
-          <table class="min-w-full divide-y divide-gray-300 border">
-            <thead class="bg-gray-50">
-              <tr>
-                <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Reason</th>
-								<th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Start Time</th>
-                <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">End Time</th>
-                <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
-                  <span class="sr-only">Delete</span>
-                </th>
-              </tr>
-            </thead>
-            <tbody class="bg-gray-50">
-              <!-- Odd row -->
-              <tr>
-                <td class="whitespace-nowrap py-4 pl-4 text-sm text-gray-500">Thanksgiving</td>
-                <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Aug. 25 2021 9:00 AM</td>
-                <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Aug. 29 2021 9:30 AM</td>
-								<td class="whitespace-nowrap px-3 py-4"><i class="fa fa-xl fa-trash"></td>
-              </tr>
-            </tbody>
-						<tbody class="bg-white">
-							<!-- Even row -->
-              <tr>
-                <td class="whitespace-nowrap py-4 pl-4 text-sm text-gray-500">Thanksgiving</td>
-                <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Aug. 25 2021 9:00 AM</td>
-                <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Aug. 29 2021 9:30 AM</td>
-								<td class="whitespace-nowrap px-3 py-4"><i class="fa fa-xl fa-trash"></td>
-              </tr>
-            </body>       
-            </tbody>
-						  <tbody class="bg-gray-50">
-              <tr>
-                <td class="whitespace-nowrap py-4 pl-4 text-sm text-gray-500">Thanksgiving</td>
-                <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Aug. 25 2021 9:00 AM</td>
-                <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Aug. 29 2021 9:30 AM</td>
-								<td class="whitespace-nowrap px-3 py-4"><i class="fa fa-xl fa-trash"></td>
-              </tr>
-            </tbody>
-						<tbody class="bg-white">
-							<!-- Even row -->
-              <tr>
-                <td class="whitespace-nowrap py-4 pl-4 text-sm text-gray-500">Thanksgiving</td>
-                <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Aug. 25 2021 9:00 AM</td>
-                <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">Aug. 29 2021 9:30 AM</td>
-								<td class="whitespace-nowrap px-3 py-4"><i class="fa fa-xl fa-trash"></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-        </div>
-        </div>
+          </div>
         </div>
       </div>
     </div>
