--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
           <%= render partial: 'shared/sidenav' %>
           <%= render partial: 'shared/customer_sidenav' %>
           <%= render partial: 'shared/interpreter_sidenav' %>
+          <%= render partial: 'shared/site_admin_sidenav' %>
         <% end %>
         <!-- <div class="p-8 bg-white rounded shadow"> -->
         <div class="flex flex-1 flex-col">
