--- a/app/views/recipients/_form.html.erb
+++ b/app/views/recipients/_form.html.erb
@@ -53,7 +53,7 @@
                 </div>
               </div>
 
-              <% unless customer_logged_in? %>
+              <% if agency_logged_in? %>
                 <div class="col-span-3 sm:col-span-6">
                   <div class="form-group">
                     <%= form.label "Customer*", class: "block text-sm font-medium text-gray-700" %>
