--- a/app/views/recipients/edit.html.erb
+++ b/app/views/recipients/edit.html.erb
@@ -15,7 +15,7 @@
                 </div>
                 </div>
                 <div class="p-8 bg-white rounded shadow">
-                  <%= render partial: "form", locals: { recipient: @recipient, account_customers: @account_customers } %> 
+                  <%= render partial: "form", locals: { recipient: @recipient, customers: @customers } %> 
                 </div>
             </div>
           </div>
