--- a/app/views/requestors/_form.html.erb
+++ b/app/views/requestors/_form.html.erb
@@ -28,33 +28,34 @@
                 <%= requestor_detail.label :work_phone, class: "block text-sm font-medium text-gray-700" %>
                 <%= requestor_detail.text_field :work_phone, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
               </div>
-              <% unless customer_logged_in? %>
+              
                 <div class="sm:col-span-6 lg:col-span-3">
                   <div class="form-group">
                     <%= requestor_detail.label "Requestor Type*", class: "block text-sm font-medium text-gray-700" %>
                     <%= requestor_detail.select :requestor_type, options_for_select(requestor_type_options, requestor.requestor_detail.requestor_type), {}, class: "form-control focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-s" %>
                   </div>
                 </div>
-              <% end %>
+              
               <div class="col-span-6 sm:col-span-6" data-controller="select-group">
-                <% unless customer_logged_in? %>
+                <% if agency_logged_in? %>
                   <div class="col-span-3 sm:col-span-3">
                     <div class="form-group">
                       <%= requestor_detail.label :customer_id, class: "block text-sm font-medium text-gray-700" %>
-                      <%= requestor_detail.select :customer_id, options_from_collection_for_select(account_customers, :id, :name, requestor.requestor_detail.customer_id ), {prompt: "Select A Customer First..."}, {class: 'form-control',  data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: select_list_sites_path, select_group_select_key_param: 'customer_id', select_group_select_update_target_param: 'user_requestor_detail_attributes_site_id', select_group_select_clear_target_param: 'user_requestor_detail_department_id' }} %> 
+                      <%= requestor_detail.select :customer_id, options_from_collection_for_select(account_customers, :id, :name, requestor.requestor_detail.customer_id ), {prompt: "Select A Customer First..."}, {class: 'form-control',  data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: select_list_sites_path, select_group_select_key_param: 'customer_id', select_group_select_update_target_param: 'user_requestor_detail_attributes_site_id', select_group_select_clear_target_param: 'user_requestor_detail_attributes_department_id' }} %> 
                     </div>
                   </div>
                 <% end %>
+                
                 <div class="col-span-3 sm:col-span-3">
                   <div class="form-group">
                     <%= requestor_detail.label :site_id, class: 'text-blueCoral' %>
-                    <%= requestor_detail.select :site_id, options_from_collection_for_select(sites, :id, :name, requestor.requestor_detail.site_id), {}, {disabled: @field_disabled, class: 'form-control', data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: department_select_list_sites_path, select_group_select_key_param: 'site_id', select_group_select_update_target_param: 'user_requestor_detail_attributes_department_id'}} %>
+                    <%= requestor_detail.select :site_id, options_from_collection_for_select(sites, :id, :name, requestor.requestor_detail.site_id), {include_blank: "None"}, {disabled: @field_disabled, class: 'form-control', data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: department_select_list_sites_path, select_group_select_key_param: 'site_id', select_group_select_update_target_param: 'user_requestor_detail_attributes_department_id'}} %>
                   </div>
                 </div>
                 <div class="lg:col-span-3 sm:col-span-6">
                   <div class="form-group">
                     <%= requestor_detail.label :department_id, class: 'text-blueCoral' %>
-                    <%= requestor_detail.select :department_id, options_from_collection_for_select(departments, :id, :name, requestor.requestor_detail.department_id), {}, {disabled: @field_disabled, class: 'form-select'} %>
+                    <%= requestor_detail.select :department_id, options_from_collection_for_select(departments, :id, :name, requestor.requestor_detail.department_id), {include_blank: "None"}, {disabled: @field_disabled, class: 'form-control'} %>
                   </div>
                 </div>  
               </div>
@@ -101,7 +102,7 @@
           <% else %>
             <%= link_to t("cancel"), requestor_path(@requestor), class: "inline-flex justify-center rounded-md border bg-transparent border-tokaniprimary-600 py-2 px-3.5 text-sm font-medium text-tokaniprimary-600 shadow-sm hover:bg-tokaniprimary-600 hover:text-white focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
           <% end %>
-          <%= form.button button_text("Create Requestor"), class:"inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
+          <%= form.button button_text(form.send(:submit_default_value)), class:"inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
         </div>
       </div> 
     </div>
