--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -4,13 +4,25 @@
     <div class="mt-5 md:col-span-2 md:mt-0">
       <div class="overflow-hidden shadow sm:rounded-md">
         <div class="bg-white px-4 py-5 sm:p-6">
+          
           <div class="grid grid-cols-6 gap-6">
-            <% if @site.new_record? %>
+            
+            <% if @site.new_record? && agency_logged_in? %>
               <div class="lg:col-span-3 sm:col-span-6">
                 <%= form.label :customer_id, "Agency customer*" %>
                 <%= form.select :customer_id, options_from_collection_for_select(@customers, :id, :name, @customer_id), {prompt: "Please select A Customer"}, {class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm"} %>
               </div>
+             
           <% else %>
+          <div class="col-span-6 sm:col-span-6">
+            <h4 class="text-tokanisecondary-700 mb-3"><%= @customer.name.titleize %></h4>
+            <%= form.hidden_field :customer_id, value: @customer.id %>
+            <div class="relative">
+              <div class="absolute inset-0 flex items-center" aria-hidden="true">
+                <div class="w-full border-t border-gray-300"></div>
+              </div>
+            </div>
+          </div>
             <template data-form-target="template">
               <tr>
                 <%= form.fields_for :departments, Department.new do |new_dept| %>
@@ -27,7 +39,7 @@
                 <th scope="col" class="py-3.5 px-3 text-left text-sm font-semibold text-gray-900">Accounting Unit Code</th>
               </tr>
             </template>
-            <div class="lg:col-span-6 sm:col-span-6 text-md font-medium text-gray-900">Customer: <%= @site.customer&.name %></div>
+            <!-- <div class="lg:col-span-6 sm:col-span-6 text-md font-medium text-gray-900">Customer: <%= @site.customer&.name %></div> -->
           <% end %>
           <div class="lg:col-span-3 sm:col-span-6">
             <%= form.label "Name*", class: "block text-sm font-medium text-gray-700" %>
